# tomogichi

./: .gitignore  CHANGELOG.md  DEPLOY.md  Makefile  Notes  README.md  build.sh  test_engine.py
qt/: CMakeLists.txt  org.tomogichi.qt.desktop  org.tomogichi.qt.json
qt/qml/: DiaryPage.qml  GuildPage.qml  PersonPage.qml  SettingsPage.qml  StatsPage.qml  TestWindow.qml  TimerPage.qml  TodayPage.qml  main.qml  main_minimal.qml
qt/src/: apptheme.h  backend.cpp  backend.h  main.cpp  palette.h  widget_gui.cpp  widget_gui.h
research/: timetome_idlerpg_summary.md
src/: main.cpp
src/core/: engine.cpp  engine.h  types.h
src/data/: storage.cpp  storage.h
